--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2217,5 +2217,33 @@
     "recommendation_manager_notes_snackbar": "Notes successfully changed!",
     "@recommendation_manager_notes_snackbar": {
         "description": "Snackbar message when notes of recommendation has been successfully changed on the recommendation manager page"
+    },
+    "pagebuilder_text_placeholder_recommendation_first_name": "First name of recommendation",
+    "@pagebuilder_text_placeholder_recommendation_first_name": {
+        "description": "Placeholder dropdown entry for first name of the recommended person in Pagebuilder Text Config menu"
+    },
+    "pagebuilder_text_placeholder_recommendation_last_name": "Last name of recommendation",
+    "@pagebuilder_text_placeholder_recommendation_last_name": {
+        "description": "Placeholder dropdown entry for last name of the recommended person in Pagebuilder Text Config menu"
+    },
+    "pagebuilder_text_placeholder_recommendation_name": "Name of recommendation",
+    "@pagebuilder_text_placeholder_recommendation_name": {
+        "description": "Placeholder dropdown entry for name of the recommended person in Pagebuilder Text Config menu"
+    },
+    "pagebuilder_text_placeholder_promoter_first_name": "First name of promoter",
+    "@pagebuilder_text_placeholder_promoter_first_name": {
+        "description": "Placeholder dropdown entry for first name of the promoter in Pagebuilder Text Config menu"
+    },
+    "pagebuilder_text_placeholder_promoter_last_name": "Last name of promoter",
+    "@pagebuilder_text_placeholder_promoter_last_name": {
+        "description": "Placeholder dropdown entry for last name of the promoter in Pagebuilder Text Config menu"
+    },
+    "pagebuilder_text_placeholder_promoter_name": "Name of promoter",
+    "@pagebuilder_text_placeholder_promoter_name": {
+        "description": "Placeholder dropdown entry for name of the promoter in Pagebuilder Text Config menu"
+    },
+    "pagebuilder_text_placeholder_picker": "Choose placeholder",
+    "@pagebuilder_text_placeholder_picker": {
+        "description": "Title of dropdown menu for placeholder in text config menu"
     }
 }
