--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1406,6 +1406,10 @@
     "@landingpage_pagebuilder_config_menu_video_player_type": {
         "description": "Video player title in the pagebuilder config menu"
     },
+    "landingpage_pagebuilder_config_menu_anchor_button_type": "Anchor Button",
+    "@landingpage_pagebuilder_config_menu_anchor_button_type": {
+        "description": "Anchor button title in the pagebuilder config menu"
+    },
     "landingpage_pagebuilder_config_menu_unknown_type": "Unknown",
     "@landingpage_pagebuilder_config_menu_unknown_type": {
         "description": "Unknown title in the pagebuilder config menu"
@@ -2241,5 +2245,25 @@
     "pagebuilder_config_menu_hover_switch": "Activate hover",
     "@pagebuilder_config_menu_hover_switch": {
         "description": "Title of the hover switch in the hover tab in the pagebuilder config menu"
+    },
+    "pagebuilder_anchor_button_content_section_id": "Section ID",
+    "@pagebuilder_anchor_button_content_section_id": {
+        "description": "Title for the collapsible view for the anchor button section id in the pagebuilder anchor button configuration"
+    },
+    "pagebuilder_anchor_button_content_section_id_subtitle": "Please enter the section ID you want to scroll to. You can find this in the respective section.",
+    "@pagebuilder_anchor_button_content_section_id_subtitle": {
+        "description": "Subtitle for the collapsible view for the anchor button section id in the pagebuilder anchor button configuration"
+    },
+    "pagebuilder_anchor_button_content_section_id_placeholder": "Section ID",
+    "@pagebuilder_anchor_button_content_section_id_placeholder": {
+        "description": "Placeholder for the textfield in the collapsible view for the anchor button section id in the pagebuilder anchor button configuration"
+    },
+    "pagebuilder_section_id": "ID:",
+    "@pagebuilder_section_id": {
+        "description": "Text before the ID in the Pagebuilder Section configuration"
+    },
+    "pagebuilder_section_copy_id_tooltip": "Copy id",
+    "@pagebuilder_section_copy_id_tooltip": {
+        "description": "Tooltip for the Copy ID button in the Pagebuilder Section configuration"
     }
 }
