--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1538,9 +1538,17 @@
     "@landingpage_pagebuilder_layout_menu_alignment": {
         "description": "Title alignment menu in the Pagebuilder Config Menu in the layout area"
     },
+    "landingpage_pagebuilder_layout_menu_image_control_switch": "Show pronoter image",
+    "@landingpage_pagebuilder_layout_menu_image_control_switch": {
+        "description": "Switch title for promoter image in pagebuilder config menu in background area"
+    },
     "landingpage_pagebuilder_layout_menu_image_control_title": "Background image",
     "@landingpage_pagebuilder_layout_menu_image_control_title": {
         "description": "Title background image menu in the Pagebuilder Config Menu in the background area"
+    },
+    "landingpage_pagebuilder_layout_menu_image_control_title_promoter": "Specify a placeholder image if the promoter image does not exist",
+    "@landingpage_pagebuilder_layout_menu_image_control_title_promoter": {
+        "description": "Title background image menu item for image if promoter image should be used in the Pagebuilder Config menu in the background area"
     },
     "landingpage_pagebuilder_layout_menu_background_contentmode": "Content mode",
     "@landingpage_pagebuilder_layout_menu_background_contentmode": {
